// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Image _4x3Image smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <img alt="Placeholder image"
       loading="lazy"
       width="800"
       height="600"
       decoding="async"
       data-nimg="1"
       class="src-components-Image-Image-module__image--gXjYq"
       srcset="/static/media/_4x3.58bee57f.png?w=828&amp;q=75 1x, /static/media/_4x3.58bee57f.png?w=1920&amp;q=75 2x"
       src="/static/media/_4x3.58bee57f.png?w=1920&amp;q=75"
       style="color: transparent;"
  >
</main>
`;

exports[`Components/Image _16x9Image smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <img alt="Placeholder image"
       loading="lazy"
       width="1920"
       height="1080"
       decoding="async"
       data-nimg="1"
       class="src-components-Image-Image-module__image--gXjYq"
       srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
       src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
       style="color: transparent;"
  >
</main>
`;

exports[`Components/Image Playground smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <img alt="Placeholder image"
       loading="lazy"
       width="1920"
       height="1080"
       decoding="async"
       data-nimg="1"
       class="src-components-Image-Image-module__image--gXjYq"
       srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
       src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
       style="color: transparent;"
  >
</main>
`;

exports[`Components/Image SquareImage smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <img alt="Placeholder image"
       loading="lazy"
       width="1080"
       height="1080"
       decoding="async"
       data-nimg="1"
       class="src-components-Image-Image-module__image--gXjYq"
       srcset="/static/media/_1x1.ea48a62d.png?w=1080&amp;q=75 1x, /static/media/_1x1.ea48a62d.png?w=3840&amp;q=75 2x"
       src="/static/media/_1x1.ea48a62d.png?w=3840&amp;q=75"
       style="color: transparent;"
  >
</main>
`;
